[package]
name = "async-demo"
version = "0.1.0"
authors = ["hgfkeep <hgfkeep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="http-server-demo"
path="async-http-server-demo/src/main.rs"

[workspace]
members=["async-http-server-demo"]

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
tokio = {version = "0.2", features = ["full"] }
hyper = "0.13.5"
# (only for testing)
failure = "0.1.6"
reqwest = "0.9.24"