[package]
name = "async-timer"
version = "0.1.0"
authors = ["hgfkeep <hgfkeep@gmail.com>"]
edition = "2018"

[workspace]
members = ["hello-world"]

[[bin]]
name = "hello"
path = "hello-world/src/main.rs"

[[bin]]
name = "timer"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"