[package]
name = "log-demo"
version = "0.1.0"
authors = ["hgfkeep <hgfkeep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members=["logmain", "envlog"]

[[bin]]
name = "logmain"
path = "logmain/src/main.rs"

[[bin]]
name = "envlog"
path = "envlog/src/main.rs"

[[bin]]
name="pretty_env_logger_demo"
path="env-pretty-log-demo/src/main.rs"

[[bin]]
name = "log-demo"
test = false
path = "src/main.rs"

[dependencies]
log = "^0.4.8"
env_logger = "0.7.1"
pretty_env_logger = "0.4.0"