[package]
name = "network"
version = "0.1.0"
authors = ["hgfkeep <hgfkeep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["echo", "echo-client", "udp-echo", "udp-echo-client", "boardcast", "ipaddr", "simple_dns", "nslookup", 
"serde", "serde_net_io", "serde_custom_net_io", "parse_str"]

[[bin]]
name = "echo-server"
path = "echo/src/main.rs"

[[bin]]
name = "echo-client"
path = "echo-client/src/main.rs"

[[bin]]
name = "udp-echo-server"
path = "udp-echo/src/main.rs"

[[bin]]
name = "udp-echo-client"
path = "udp-echo-client/src/main.rs"

[[bin]]
name = "boardcast"
path = "boardcast/src/main.rs"

[[bin]]
name = "ipaddr"
path = "ipaddr/src/main.rs"

[[bin]]
name = "simple_dns"
path = "simple_dns/src/main.rs"

[[bin]]
name = "nslookup"
path = "nslookup/src/main.rs"

[[bin]]
name = "serde"
path = "serde/src/main.rs"

[[bin]]
name = "serde_net_io"
path = "serde_net_io/src/main.rs"

[[bin]]
name = "serde_custom_net_io"
path = "serde_custom_net_io/src/main.rs"

[[bin]]
name = "parse_str"
path = "parse_str/src/main.rs"

[dependencies]
dns-lookup = "1.0.1"
serde = "1.0.106"
serde_json = "1.0.51"
serde_yaml = "0.8.11"
serde_derive = "1.0.106"
serde_test = "1.0.106"
clap = "2.33.0"
env_logger = "0.7.1"
log = "0.4.8" 
nom = "5.1.1"