[package]
name = "tokio-demo"
version = "0.1.0"
authors = ["hgfkeep <hgfkeep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="hello"
path="src/hello.rs"

[[bin]]
name = "echo"
path = "src/echo.rs"

[dependencies]
tokio = {version = "0.2", features = ["full"] }
futures = "0.3"