[package]
name = "self-repl-rustyline"
version = "0.1.0"
authors = ["guangfuhe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = { git = "https://github.com/kkawakam/rustyline.git" }
# rustyline = "6.0.0"
rustyline-derive = "0.3.0"
env_logger = "0.7"
unicode-width = "0.1.7"
radix_trie = "0.1.6"