[package]
name = "serde_custom_net_io"
version = "0.1.0"
authors = ["hgfkeep <hgfkeep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.106"
serde_json = "1.0.51"
serde_yaml = "0.8.11"
serde_derive = "1.0.106"
serde_test = "1.0.106"
clap = "2.33.0"
env_logger = "0.7.1"
log = "0.4.8" 